@@ -18,6 +18,8 @@ ikiwiki (3.20150330) UNRELEASED; urgency=medium
   * Do not enable emailauth by default, to avoid surprises on httpauth-only
     sites. Enable it by default in openid instead, since it is essentially
     a replacement for OpenIDs.
+  * Make the attachment plugin work with CGI.pm 4.x (Closes: #786586;
+    workaround for #786587 in libcgi-pm-perl)
 
  -- Joey Hess <id@joeyh.name>  Tue, 28 Apr 2015 12:24:08 -0400
 
